OC2 = OpenCart 2 (alleen OpenCart 2.3 wordt nog ondersteund)
OC3 = OpenCart 3
PS  = PrestaShop (1.7.6+)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.1.0 (2020-12-??)
------------------
Features:
- PS|OC|VM|HS: Het factuurstatusoverzicht is nu ook aan PrestaShop, OpenCart,
  VirtueMart en HikaShop toegevoegd.
- ALL: Het factuurstatusoverzicht wordt nu geladen via lazy-load.
- ALL: Op het factuurstatusoverzicht kun je nu de factuurgegevens opnieuw
  versturen als er een fout is ontdekt tussen de bestelling in de webshop en de
  factuur in Acumulus.
- ALL: Op het factuurstatusoverzicht heeft het veld waarop je de betaaldatum
  kunt invullen nu een standaardwaarde die op dezelfde manier bepaald wordt als
  bij automatische verzending.
- PS: html5 details elements worden nu nagebootst met javascript en css opmaak.
- PS: PS 1.5 and 1.6 will probably not work anymore, so only PS1.7 remains
  supported.
- WC: Tekst "buitenlandse btw" ingekort.
- ALL: Het registratieformulier maakt geen gebruik meer van html <details>. Dit
  zodat het in alle ondersteunde webshops correct getoond wordt.
- ALL: Sta toe dat fieldsets geen fields hebben, alleen een titel en
  beschrijving.
- JOO: Use html 5 date fields instead of old date fields from Joomla self.
- WC: Use html 5 date fields instead of adding the jquery date picker.
- ALL: Added support for API calls Picklists/Products and Stock/Stock_Add
Bugs:
- PS: PS1.7.7.0 introduced a property Module::confirmUninstall that we already
  use in our AcumulusModule, so we had to rename our (internal) property.
- PS: Instellingenformulier: password wordt niet meegestuurd, dus maak het niet
  verplicht en accepteer leeg als "geen verandering".
- PS: Het registratieformulier dient niet zichtbaar te zijn in het admin menu.