@@ -31,6 +31,11 @@ class Countries
     /**
      * Returns whether the country is a EU country outside the Netherlands.
      *
+     * This method determines whether a country is in or outside the EU based on
+     * fiscal handling of invoices to customers in that country. If vattype 3 -
+     * EU reversed vat - or 6 - foreignvat - is possible it is considered to be
+     * in the EU.
+     *
      * For now only the alpha-2 codes are allowed. Other notations will be added
      * as soon we support a web shop with a different way of storing countries.
      *
@@ -38,12 +43,15 @@ class Countries
      *   Case insensitive ISO 3166-1 alpha-2 country code.
      *
      * @return bool
+     *
+     * @deprecated: Not brexit-proof, do no longer use, use a solution as in
+     *   Completor::isEu().
      */
     public function isEu($countryCode)
     {
         // Sources:
-        // - http://publications.europa.eu/code/pdf/370000en.htm
-        // - http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
+        // - https://publications.europa.eu/code/pdf/370000en.htm
+        // - https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
         // EFTA countries are not part of this list because regarding invoicing
         // they are considered to be outside of the EU.
         $euCountryCodes = array(
